# QuadLQR

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: run_all.py
src/quadlqr/: __init__.py  config.py  metrics.py  plotting.py  types.py
src/quadlqr/control/: __init__.py  allocation.py  lqr.py  pid.py  reference.py
src/quadlqr/dynamics/: __init__.py  motor.py  quadrotor.py
src/quadlqr/math/: __init__.py  quaternion.py  so3.py
src/quadlqr/sim/: __init__.py  integrator.py  runner.py  scenarios.py
