[project]
name = "quadlqr"
version = "0.1.0"
description = "Quadrotor hierarchical LQR with quaternion attitude, motor dynamics, and mixer allocation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
